# HCHS-Cansat-2025

./: README.md
flight-accessories/: Cargo.toml  README.md  compille.sh  config.toml
flight-accessories/src/: main.rs
flight-system/: .gitignore  .gitignore.save  CMakeCache.txt  CMakeLists.txt  README.md  main.c  sdkconfig  sdkconfig.old
flight-system/components/ra01s/: Kconfig.projbuild  ra01s.c
flight-system/main/: CMakeLists.txt  bmp180.c  idf_component.yml  main.c  minmea.c  minmea.h
ground-interface/: dashboard.js  index.php
ground-interface/raw/: index.php
ground-station/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ground-station/main/: CMakeLists.txt  http.c  http.h  main.c  wifi.c  wifi.h
image-capture/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  envsetup.sh  image-capture
image-capture/main/: main.cpp
recieve-image/: Cargo.toml
recieve-image/src/: main.rs
